# unitree-g1-dashboard

./: .gitignore  AGENTS.md  README.md  pyrightconfig.json
dashboard/: AGENTS.md  index.html  package-lock.json  package.json
dashboard/src/: App.css  App.tsx  index.css
ros2_ws/: AGENTS.md
ros2_ws/src/: AGENTS.md
ros2_ws/src/g1_api/: AGENTS.md  package.xml  setup.cfg  setup.py
ros2_ws/src/g1_api/config/: api_config.yaml
ros2_ws/src/g1_api/g1_api/: __init__.py  api_node.py
ros2_ws/src/g1_api/g1_api/routes/: __init__.py  commands.py  state.py
ros2_ws/src/g1_api/launch/: api.launch.py
ros2_ws/src/g1_api/resource/: g1_api
ros2_ws/src/g1_bridge/: AGENTS.md  package.xml  setup.cfg  setup.py
ros2_ws/src/g1_bridge/config/: bridge_config.yaml
ros2_ws/src/g1_bridge/g1_bridge/: __init__.py  sdk_bridge_node.py
ros2_ws/src/g1_bridge/launch/: bridge.launch.py
ros2_ws/src/g1_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/g1_bringup/launch/: full_system.launch.py
ros2_ws/src/g1_bringup/resource/: g1_bringup
ros2_ws/src/g1_locomotion/: AGENTS.md  package.xml  setup.cfg  setup.py
ros2_ws/src/g1_locomotion/config/: locomotion_params.yaml
ros2_ws/src/g1_locomotion/g1_locomotion/: __init__.py  locomotion_node.py  policy_runner.py
ros2_ws/src/g1_locomotion/launch/: locomotion.launch.py
ros2_ws/src/g1_locomotion/policies/: README.md
ros2_ws/src/g1_locomotion/resource/: g1_locomotion
ros2_ws/src/g1_locomotion/test/: test_locomotion_command_selection.py  test_policy_runner.py  test_rl_live.py
ros2_ws/src/g1_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/g1_msgs/msg/: JointCommand.msg  LocomotionState.msg  RobotState.msg  SafetyStatus.msg
ros2_ws/src/g1_msgs/srv/: SetLocomotionMode.srv
ros2_ws/src/g1_orchestrator/: AGENTS.md  package.xml  setup.cfg  setup.py
ros2_ws/src/g1_orchestrator/config/: orchestrator_params.yaml
ros2_ws/src/g1_orchestrator/g1_orchestrator/: orchestrator_node.py  state_machine.py
ros2_ws/src/g1_orchestrator/launch/: orchestrator.launch.py  phase2_stack.launch.py
ros2_ws/src/g1_orchestrator/test/: test_orchestrator_helpers.py
ros2_ws/src/g1_safety/: AGENTS.md  package.xml  setup.cfg  setup.py
ros2_ws/src/g1_safety/config/: safety_params.yaml
ros2_ws/src/g1_safety/g1_safety/: joint_limits.py  safety_monitor_node.py  safety_node.py
ros2_ws/src/g1_safety/launch/: safety.launch.py
ros2_ws/src/g1_safety/test/: test_joint_limits.py
scripts/: AGENTS.md  g1_test_panel.py  start_g1_golden_path.sh  stop_g1_golden_path.sh  test_balance_dds.py
