<?xml version="1.0"?>
<package format="3">
  <name>g1_locomotion</name>
  <version>0.0.0</version>
  <description>Unitree G1 locomotion policy runner with RL and PD fallback control.</description>
  <maintainer email="plate@example.com">plate</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>ament_index_python</depend>
  <depend>g1_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>std_srvs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
