<?xml version="1.0"?>
<package format="3">
  <name>g1_msgs</name>
  <version>0.0.0</version>
  <description>ROS 2 message definitions for Unitree G1 low-level state and command topics.</description>
  <maintainer email="plate@example.com">plate</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
