<?xml version="1.0"?>
<package format="3">
  <name>g1_orchestrator</name>
  <version>0.0.0</version>
  <description>Locomotion state orchestrator for Unitree G1 ROS 2 control.</description>
  <maintainer email="plate@example.com">plate</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>g1_msgs</depend>
  <depend>g1_bridge</depend>
  <depend>g1_safety</depend>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>std_srvs</depend>
  <exec_depend>ament_index_python</exec_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
