<?xml version="1.0"?>
<package format="3">
  <name>g1_safety</name>
  <version>0.0.0</version>
  <description>Safety monitor for Unitree G1 ROS 2 state supervision.</description>
  <maintainer email="plate@example.com">plate</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>g1_msgs</depend>
  <depend>rclpy</depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
